--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colorama==0.4.4
 fastapi==0.65.2
 h11==0.12.0
 pydantic==1.8.2
+python-dotenv==0.17.1
 starlette==0.14.2
 typing-extensions==3.10.0.0
 uvicorn==0.14.0
